styles.css
.local_chunkupload .custom-file-input ~ .custom-file-label.chunkupload-label {
    padding: 0;
    border-radius: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 0;
}

.local_chunkupload .custom-file-input ~ .custom-file-label.chunkupload-label:after {
    display: none;
}

.local_chunkupload .chunkupload-label > span {
    height: 100%;
    text-align: center;
    padding: .375rem .75rem;
}

.local_chunkupload .chunkupload-label .chunkupload-browse {
    flex: 1 1 20%;
}

.local_chunkupload .chunkupload-label .chunkupload-left {
    flex: 1 1 80%;
    position: relative;
    white-space: nowrap;
    overflow: hidden;
}

.local_chunkupload .chunkupload-label .chunkupload-left .chunkupload-filename {
    width: 70%;
    overflow: hidden;
    display: inline-block;
    text-overflow: ellipsis;
}

.local_chunkupload .chunkupload-label .chunkupload-progress {
    position: absolute;
    bottom: 0;
    left: 0;
    height: 6px;
    background: #578014;
}

.local_chunkupload .chunkupload-label .chunkupload-icon {
    display: inline-block;
    vertical-align: top;
    color: green;
}

.local_chunkupload .chunkupload-delete {
    position: absolute;
    right: 0;
    top: 0;
    z-index: 2;
    padding: .375rem;
}

.local_chunkupload .chunkupload-filesize {
    float: right;
}

